--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feeder-cli",
   "version": "1.0.0",
-  "description": "A npm based terminal app for rss reading",
+  "description": "A CLI app for checking your github dashboard from anywhere! Powered by Node",
   "main": "./bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +22,8 @@
   "dependencies": {
     "boxen": "4.0",
     "chalk": "2.4",
+    "keytar": "^7.9.0",
+    "prompt-sync": "^4.2.0",
     "yargs": "13.2"
   }
 }
