--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "boxen": "4.0",
     "chalk": "2.4",
+    "delay": "^5.0.0",
     "keytar": "^7.9.0",
     "prompt-sync": "^4.2.0",
     "yargs": "13.2"
