Migrate to ESM and Inquirer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "Displayoptions",
+        "doicont",
         "eventsnum",
         "keytar",
-        "newrssurl"
+        "newrssurl",
+        "promptvalue"
     ]
 }
