--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "inquirer": "^9.1.4",
     "keytar": "^7.9.0",
     "node-fetch": "^2.6.1",
+    "rss-parser": "^3.12.0",
     "yargs": "17.6"
   },
   "pkg": {
