--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "inquirer": "^9.1.4",
     "keytar": "^7.9.0",
     "node-fetch": "^2.6.1",
+    "pkg": "^5.8.0",
     "rss-parser": "^3.12.0",
     "yargs": "17.6"
   },
   "pkg": {
     "targets": [
-      "node14-linux-x64",
-      "node14-macos-x64",
-      "node14-win-x64"
+      "latest-linux-x64",
+      "latest-macos-x64",
+      "latest-win-x64"
     ],
     "outputPath": "release"
   }
