--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Displayoptions",
         "doicont",
         "eventsnum",
+        "feedreps",
         "keytar",
         "newrssurl",
         "promptvalue"
