--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "Ravinder Olivier Singh Dadiala <ravinder-Olivier@outlook.com>",
   "license": "MIT",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/ravinder-Olivier/Feeder-CLI/issues"
   },
@@ -22,6 +23,7 @@
   "dependencies": {
     "boxen": "7.0",
     "chalk": "5.1",
+    "eslint": "^8.28.0",
     "inquirer": "^9.1.4",
     "keytar": "^7.9.0",
     "node-fetch": "^2.6.1",
