--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "boxen": "7.0",
     "chalk": "5.1",
     "eslint": "^8.28.0",
+    "esm": "^3.2.25",
     "inquirer": "^9.1.4",
     "keytar": "^7.9.0",
     "node-fetch": "^2.6.1",
