--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -5,8 +5,10 @@ name: Node.js Package
 
 on:
   release:
-    manual:
-
+    release:
+    types: [created]
+    
+    
 jobs:
   build:
     runs-on: ubuntu-latest
