--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A CLI app for checking your github dashboard from anywhere! Powered by Node",
   "main": "./bin/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    check: "node . check",
+    "manage": "node . manage"
   },
   "repository": {
     "type": "git",
