Github Packages Update
Signed-off-by: Ravinder Olivier Singh Dadiala <ravinder-Olivier@outlook.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "confirmationrss",
         "Displayoptions",
         "doicont",
         "eventsnum",
+        "fdurl",
         "feedreps",
+        "getfeed",
         "keytar",
         "newrssurl",
         "promptvalue"
