--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     ],
     "outputPath": "release",
     "publishConfig": {
-      "registry": "https://npm.pkg.github.com/ravinder-Olivier/feeder-cli"
+      "registry": "https://npm.pkg.github.com/ravinder-Olivier"
     }
   }
 }
