--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
           scope: '@ravinder-olivier'
-      - run: install --include-dev
+      - run: npm install --include-dev
       - run: echo registry=https://npm.pkg.github.com/ravinder-olivier >> .npmrc
       - run: npm publish
         env:
