--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "doicont",
         "eventsnum",
         "fdurl",
+        "feedarray",
         "feedreps",
         "getfeed",
         "keytar",
