--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "keytar": "^7.9.0",
     "node-fetch": "^2.6.1",
     "prompt": "^1.3.0",
+    "reverse-array": "^1.0.0",
     "rss-parser": "^3.12.0",
     "yargs": "17.6"
   },
