Minor Updates allow user to set their RSS URL
Signed-off-by: Ravinder Olivier Singh Dadiala <ravinder-Olivier@outlook.com>

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/ravinder-Olivier/Feeder-CLI#readme",
   "bin": {
-    "feeder": "./bin/index.cjs"
+    "feeder": "./bin/index.cjs",
+    "feeder-settings": "./bin/feeder-settings.json"
   },
   "dependencies": {
     "chalk": "^4.1.0",
