Make a separate Functions File, clean up main file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,14 @@
         "eventsnum",
         "fdurl",
         "feedarray",
+        "feedparser",
         "feedreps",
         "getfeed",
+        "ghfeed",
         "keytar",
+        "logfeed",
         "newrssurl",
-        "promptvalue"
+        "promptvalue",
+        "simplequirer"
     ]
 }
