Updates to the /docs files
Signed-off-by: Ravinder Olivier Singh Dadiala <ravinder-Olivier@outlook.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "arraytostring",
+        "awesomecoderepo",
         "confirmationrss",
         "Displayoptions",
         "doicont",
@@ -17,7 +18,9 @@
         "logstring",
         "newrssurl",
         "nocomma",
+        "octocat",
         "promptvalue",
-        "simplequirer"
+        "simplequirer",
+        "tada"
     ]
 }
