--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/ravinder-Olivier/Feeder-CLI#readme",
   "bin": {
-    "feeder": "./src/index.cjs",
+    "feeder": "./src/index.mjs",
     "feeder-settings": "./src/feeder-settings.json",
-    "feeder-engines": "./src/api/feeder-engines.cjs",
-    "engine-functions": "./src/api/engine-functions.cjs"
+    "feeder-engines": "./src/api/feeder-engines.mjs",
+    "engine-functions": "./src/api/engine-functions.mjs"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
@@ -33,6 +33,7 @@
     "node-fetch": "^3.3.2",
     "prompt": "^1.3.0",
     "reverse-array": "^1.0.0",
+    "reverse-array-new": "^1.0.0",
     "rss-parser": "^3.12.0",
     "yargs": "17.7"
   },
