--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "edit-json-file": "^1.7.0",
     "fast-rss-parser": "^0.0.2",
     "inquirer": "9.2.10",
+    "jest": "^29.6.4",
     "keytar": "^7.9.0",
     "node-fetch": "^3.3.2",
     "prompt": "^1.3.0",
