--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ansi-colors": "^4.1.3",
     "edit-json-file": "^1.7.0",
     "fast-rss-parser": "^0.0.2",
-    "inquirer": "9.2.10",
+    "inquirer": "^9.2.12",
     "jest": "^29.6.4",
     "keytar": "^7.9.0",
     "node-fetch": "^3.3.2",
@@ -42,7 +42,7 @@
     "eslint": "^8.28.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "pkg": "^5.8.0"
   },
